# SignalGPT

./: .gitignore  LICENSE  LINKS.md  README.md  pyproject.toml
.virtual_documents/notebooks/: 01.0_moe_expert_train.ipynb
models/moe_v0_linear_expert_ALL/: adapter_config.json  training_log.csv  training_log.parquet
notebooks/: 00_data_download_process.ipynb  00_homology_reduction.ipynb  01_data_analysis.ipynb  02_train_moe_expert.ipynb  deprecated_code.py  test.ipynb
src/: config.py  data.py  entrypoint.py  metrics.py  plot.py  train.py  utils.py
src/model/: __init__.py  moe.py  prost_t5_sequence_classification.py  prost_t5_token_classification_crf.py  prost_t5_token_classification_lin.py  prot_t5_sequence_classification.py  prot_t5_token_classification_crf.py  prot_t5_token_classification_lin.py  sequence_classification.py  token_classification.py
src/model/crf/: README  __init__.py  conditional_random_field.py  conditional_random_field_wemission.py  conditional_random_field_wlannoy.py  conditional_random_field_wtrans.py  util.py
src/model/crf/nn/: util.py
