[tool.poetry]
name = "src"
version = "0.1.0"
description = "None"
authors = ["Finn Lueth"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.3"
transformers = "^4.35.0"
peft = "^0.5.0"
evaluate = "^0.4.1"
protobuf = "^4.25.0"
matplotlib = "^3.8.1"
swifter = "^1.4.0"
torch = "2.0.0"
deepspeed = "^0.11.2"
pytorch-crf = "^0.7.2"
sentencepiece = "^0.2.0"


[tool.poetry.group.dev.dependencies]
fastparquet = "^2023.10.1"
seaborn = "^0.13.0"
umap-learn = "^0.5.5"
plotly = "^5.18.0"
pylint = "^2.17.7"
jupyterlab = "^4.0.8"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = "E501"


